# A1SI-AITP

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.dashboard  Makefile  README.md  docker-compose.yml  run.py
backend/: Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/analysis/: models.py  serializers.py  urls.py  views.py
backend/config/: asgi.py  settings.py  urls.py
backend/core/: middleware.py  models.py  platform_bridge.py  schema.py  serializers.py  urls.py  utils.py  views.py
backend/market/: constants.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/portfolio/: models.py  serializers.py  views.py
backend/risk/: models.py  serializers.py  urls.py  views.py
backend/tests/: test_alert_filtering.py  test_audit_log.py  test_backtest_export.py  test_backtest_persistence.py  test_backtest_service.py  test_circuit_breaker.py  test_dashboard_kpis.py  test_dashboard_service.py  test_data_pipeline_service.py  test_data_quality.py  test_data_router.py  test_exchange_config.py  test_exchange_service.py  test_forex_paper_trading.py  test_framework_status.py  test_generic_paper_trading.py  test_health_check.py  test_indicators_service.py  test_integration.py  test_job_runner.py  test_kill_switch.py  test_live_trading.py  test_live_trading_full.py  test_management_commands.py  test_market.py  test_market_hours.py  test_market_scanner.py  test_market_status.py  test_metrics.py  test_model_indexes.py  test_nautilus_integration.py  test_nautilus_strategies.py  test_news.py  test_notification_service.py  (+40 more)
(+301 files in other folders)
